--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.5.0",
+    "ethereumjs-util": "^5.1.1",
     "q": "^1.5.0",
     "truffle-contract": "^2.0.0"
   },
